clusters/microk8s/apps/frigate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frigate
  labels:
    name: frigate
    app.kubernetes.io/name: frigate
